--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,7 +55,7 @@ a:hover {
 p {
   margin: 25px 0;
   padding: 0;
-  font-size: 15px;
+  font-size: 18px;
   color: #999999;
   line-height: 28px;
 }
@@ -793,6 +793,20 @@ p {
 
 .portfolio-details .portfolio-description p {
   padding: 0;
+}
+
+.portfolio-details .portfolio-description img {
+  width: 50%;
+}
+
+.portfolio-details .portfolio-description .img-wide {
+  width: 100%;
+}
+
+.img-fluid {
+  max-width: 100%;
+  height: 250px;
+  width: 500px;
 }
 
 /*--------------------------------------------------------------
